Fix all remaining unit tests: add TenantContext setup + eq() wrappers for 8 test files